<resources>
    <string name="app_name">Samsung VR mobile</string>
    <string name="launcher_app_name">Samsung VR</string>
    <string name="title_search">Search</string>
    <string name="title_download">Offline Videos</string>
    <string name="title_gallery_videos">Gallery Videos</string>
    <string name="title_gallery_images">Gallery Images</string>
    <string name="title_no_connection">No Connection</string>
    <string name="title_my_videos">My Videos</string>
    <string name="title_media_servers">Media Servers</string>
    <string name="gallery_folder_title">%2$s, %1$04d</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="faq">Help</string>
    <string name="about">About</string>
    <string name="sign_in">Sign In</string>
    <string name="search_hint"> Search Videos&#8230;</string>
    <string name="search_clear">Clear search text</string>
    <string name="version_number">Version %s</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out_title">You are not signed in.</string>
    <string name="accounts">Accounts</string>
    <string name="email_hint">Samsung VR Email&#8230;</string>
    <string name="password_hint">Samsung VR Password&#8230;</string>
    <string name="signed_in">Signed in</string>
    <string name="signed_out">Signed out</string>
    <string name="or">Or</string>
    <string name="create_account_sso">Create account&#8230;</string>
    <string name="account_sso_unavailable">Unavailable&#8230;</string>
    <string name="account_sso_verify_pw">Verify Password&#8230;</string>
    <string name="create_account_vr">Create Samsung VR account</string>
    <string name="samsung_sso_unavailable">Samsung Account is not available on this device</string>
    <string name="email_addr_hint">Email Address</string>
    <string name="name_hint">Display Name</string>
    <string name="company_url_hint">Company URL (optional)</string>
    <string name="password_hint2">Password (10 characters minimum)</string>
    <string name="verify_password_hint">Confirm Password</string>
    <string name="show_password">Show password</string>
    <string name="create_vr_acct_header">By clicking Register I have read and agree to the %1$s.</string>
    <string name="err_input_field_empty">One or more input fields are empty</string>
    <string name="err_pwd_min_length">Password must be at least %1$d characters</string>
    <string name="err_verify_pwd_mismatch">Please re-verify your password</string>
    <string name="err_invalid_email">Invalid email address</string>
    <string name="create_account_vr_success">Please check email</string>
    <string name="create_account_vr_success_2">to complete account creation and verification process.</string>
    <string name="create_account_vr_failure">Create account failure: %1$s</string>
    <string name="err_unknown">Unknown error</string>
    <string name="err_name_email_or_pwd_missing">User name and/or email and/or password cannot be empty</string>
    <string name="err_name_too_short">User name is too short</string>
    <string name="err_weak_password">Password is too weak</string>
    <string name="err_email_bad_form">Email is malformed</string>
    <string name="err_password_cannot_contain_email">Password cannot contain email</string>
    <string name="err_password_cannot_contain_username">Password cannot contain user name</string>
    <string name="err_email_in_use">Email in use</string>
    <string name="eula_header">I have read and agree to the %1$s and %2$s.</string>
    <string name="eula_header_terms">Terms of Use</string>
    <string name="eula_header_privacy">Privacy Policy</string>
    <string name="eula_agree">Agree</string>
    <string name="eula_decline">Decline</string>
    <string name="share_video_subject_format">Watch \"%1$s\" by %2$s on Samsung VR</string>
    <string name="share_app_chooser_title">Share video using</string>
    <string name="no_description_available">No Description available at this time.</string>
    <string name="no_videos_found">No videos available</string>
    <string name="download_finished">[b]%s[/b] finished downloading</string>
    <string name="insufficient_space_error">Storage space running out. Free up storage space and try again</string>
    <string name="download_start_error">Error starting download. Try later</string>
    <string name="download_progress_error">Error downloading video.</string>
    <string name="download_cancel_prompt">Are you sure you want to cancel this download?</string>
    <string name="download_cancel_error">Error cancelling download.</string>
    <string name="download_delete_error">Error deleting download.</string>
    <string name="download_delete_prompt">Are you sure you want to delete this download?</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="download_amount_percent">%1d%%</string>
    <string name="invalid_search_text">Please enter a valid search term</string>
    <string name="encrypted_to_unencrypted">Video Playback Error. Please re-download to restore playback.</string>
    <string name="video_rights_ok">Success</string>
    <string name="video_rights_private">Video no longer available. This video has been made private by uploader.</string>
    <string name="video_rights_not_avail_on_platform">Video Playback Error. Playback not available on Samsung VR mobile.</string>
    <string name="video_rights_not_avail_in_region">Video playback unavailable. Uploader has not made this video available in your region</string>
    <string name="video_rights_deleted">Video no longer available. Uploader has removed this video.</string>
    <string name="video_rights_taken_down">Video no longer available. Video has been has been taken down due to a copyright claim.</string>
    <string name="video_rights_res_not_found">Video Playback Error. Video does not exist.</string>
    <string name="video_rights_unknown">Unknown</string>
    <string name="video_rights_check_error">License Verification Error. Video encrypted by uploader. Error retrieving verification from server.</string>
    <string name="offline_validity_expired_error">Sync with service required to play</string>
    <string name="no_search_result_for_string">No results for: %1$s</string>
    <string name="active_call_playback_error">Not allowed during active call</string>
    <string name="no_network_back_pressed">Press Back again to exit the application</string>
    <string name="no_network_error">No Network\nConnection</string>
    <string name="signin_empty_userid_password">Email and/or password cannot be empty</string>
    <string name="signin_failure_generic">Failure to log in</string>
    <string name="signin_failure_code">Failure to log in (%d)</string>
    <string name="signin_failure_code_1">Invalid email or password</string>
    <string name="signin_failure_code_2">Account is locked</string>
    <string name="signin_failure_code_4">Account not activated</string>
    <string name="signin_failure_code_12">An account is already registered with an email address matching your Samsung Account profile; sign-in using email and password</string>
    <string name="unsupported_video">Unsupported video</string>
    <string name="video_not_found">Video not found</string>
    <string name="no_data_connection">Data connection is unavailable. Please enable data connection and try again later</string>
    <string name="flag_service_videos_only">Only videos from the Samsung VR service can be reported</string>
    <string name="flag_video_safe">The Samsung VR service does not allow this video to be reported</string>
    <string name="flag_video_error_already_flagged">Video already reported</string>
    <string name="flag_video_error">Error reporting video</string>
    <string name="flag_video_success">Video reported</string>
    <string name="share_video_not_allowed">The Samsung VR service does not allow this video to be shared</string>
    <string name="dlna_error">An error occurred communicating with the Media Server</string>
    <string name="dlna_no_items">No Videos Found</string>
    <string name="dlna_no_servers">Media Servers will be shown when detected</string>
    <string name="data_usage_warning_message">This application streams 4K video. Playing video on non WiFi connection might result in additional data charges and frequent buffering</string>
    <string name="dlna_spinner_heading">All Detected Media Servers</string>
    <string name="no_uploaded_videos">No uploaded videos</string>
    <string name="upload_title_multi">%1$s (%2$d)</string>
    <string name="upload_percent">%d%%</string>
    <string name="you_must_sign_in">You must sign in</string>
    <string name="file_size_gb">%.1f GB</string>
    <string name="file_size_mb">%.1f MB</string>
    <string name="file_size_kb">%.1f KB</string>
    <string name="cancel_upload">Cancel upload?</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="pending">Pending</string>
    <string name="upload_title">Title</string>
    <string name="upload_description">Description</string>
    <string name="upload_edit_details">Edit upload details</string>
    <string name="upload">Upload</string>
    <string name="upload_access">Privacy</string>
    <string name="video_permission_public">Public</string>
    <string name="video_permission_private">Private</string>
    <string name="video_permission_unlisted">Unlisted</string>
    <string name="upload_char_count">%1$d/%2$d</string>
    <string name="upload_waiting_network">Waiting for network&#8230;</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_failed_code">Upload failed (%d)</string>
    <string name="upload_failed_length_error">Upload Video length error</string>
    <string name="upload_failed_quota_exceeded">Upload quota exceeded</string>
    <string name="upload_restart_error">Application terminated during upload</string>
    <string name="upload_360_error">This is not a 360 Video</string>
    <string name="upload_size_error">Video is too large. Maximum size: %1$s; this video: %2$s</string>
    <string name="upload_resolution_error">Video resolution is too low. Minimum resolution: %1$dx%2$d; this video: %3$dx%4$d</string>
    <string name="upload_aspect_error">Video aspect ratio is invalid. Required aspect ratio: %1$.2f; this video: %2$.2f</string>
    <string name="video_status_processing">Processing&#8230;</string>
    <string name="video_status_processing_failed">Processing failed.</string>
    <string name="video_edit">Edit</string>
    <string name="video_delete">Delete</string>
    <string name="video_upload">Upload</string>
    <string name="video_edit_details">Edit video details</string>
    <string name="video_delete_confirmation">Delete video from the server?</string>
    <string name="video_delete_in_progress">Deleting video from the server</string>
    <string name="upload_disclaimer_text">Please make sure you have the rights to the video you are uploading. By uploading your videos, you agree to our %1$s and %2$s.</string>
    <string name="upload_content_guideline">Content Guidelines</string>
    <string name="video_delete_failed">Failed to delete video. Error (%d)</string>
    <string name="video_delete_success">Video was successfully deleted.</string>
    <string name="video_edit_failed">Failed to edit video details. Error (%d)</string>
    <string name="video_edit_success">Successfully edited video details.</string>
    <string name="video_edit_no_change_made">No edits were done on video details</string>
    <string name="video_edit_title_or_desc_empty">Video title or description cannot be empty. Please try again</string>
    <string name="settings_faq_key" translatable="false">FaqKey</string>
    <string name="settings_faq_title">Frequently Asked Questions</string>
</resources>